# vgmstream

./: .gitignore  CMakeLists.txt  README.md  make-build.sh
cmake/: vgmstream.cmake
ext_libs/libg719_decode/: CMakeLists.txt
libg719_decode/: Makefile  g719.vcxproj
maiatrac3plus/MaiAT3PlusDecoder/src/base/: MaiFile.cc
src/: decode.c
